<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization_title"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_input_field"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textColor="@color/black"
        android:background="@drawable/input_field"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="16dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_input_field"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textColor="@color/black"
        android:background="@drawable/input_field"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/firstEnterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization_first_enter"
        android:textSize="16sp"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization_forgot_password"
        android:textSize="16sp"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/authorization_enter"
        android:padding="10dp"
        style="@style/AppGreenButton"/>

</RelativeLayout>
