<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_input_field"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textColor="@color/black"
        android:background="@drawable/input_field"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="16dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registration_password_input_field"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textColor="@color/black"
        android:background="@drawable/input_field"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registration_password_again_input_field"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textColor="@color/black"
        android:background="@drawable/input_field"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password_change_password"
        android:layout_below="@id/confirmPasswordEditText"
        android:layout_marginTop="16dp"
        style="@style/AppGreenButton"
        android:padding="10dp"/>

</RelativeLayout>